// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListTitle /> should render title in a link 1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  font-size: 3rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2f3b6c;
  font-weight: normal;
  font-family: "Merriweather",serif;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  color: #2f3b6c;
}

.c3 {
  margin-left: 1.6rem;
  color: #7598d6;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c1:hover .c3 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

<div>
  <div>
    <h2
      class="c0"
    >
      <a
        class="c1 c2"
        href="https://code.travail.gouv.fr"
        title="le code du travail numérique"
      >
        Lorem Ipsum
        <svg
          aria-hidden="true"
          class="c3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </a>
    </h2>
    <div>
      le code du travail numérique
    </div>
  </div>
</div>
`;

exports[`<ListTitle /> should render title only 1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  font-size: 3rem;
}

<div>
  <div>
    <h2
      class="c0"
    >
      Lorem Ipsum
    </h2>
    
  </div>
</div>
`;

exports[`<ListTitle /> should render title with description 1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  font-size: 3rem;
}

<div>
  <div>
    <h2
      class="c0"
    >
      Lorem Ipsum
    </h2>
    <div>
      Hello
    </div>
  </div>
</div>
`;
